--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
         </li>    
             
         <li class="nav-item">
-            <a href="<%= contact_path %>" class="nav-link px-2 text-body-primary">Contactez-nous</a>
+            <a href="<%= new_contact_path %>" class="nav-link px-2 text-body-primary">Contactez-nous</a>
         </li>
 
         <li class="nav-item">
