--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="#" class="nav-link px-2 text-body-primary">Mention légale</a>
+            <a href="#" class="nav-link px-2 text-body-primary">Mentions légales</a>
         </li>
 
         <li class="nav-item">
