--- a/app/views/static_pages/mentionslegales.html.erb
+++ b/app/views/static_pages/mentionslegales.html.erb
@@ -7,12 +7,11 @@
     <h1 class="text-light">Mentions Légales</h1>
 </section>
 <br>
+   
 
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
-      <div class="border border-dark p-3">
+<div class="container d-flex align-items-center pt-5 my-5">
+  <div class="row justify-content-center modal-body p-5 rounded-4 shadow bg-body-tertiary">
+    
   <h2>Informations légales</h2>
   <ol>
     <li><strong>Statut du propriétaire</strong> : Société</li>
@@ -36,7 +35,5 @@
 
   <h2>Droits d'auteur</h2>
   <p>Tout le contenu présent sur le site https://keella.fly.dev, incluant, de façon non limitative, les graphismes, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société [Nom de la société] à l'exception des marques, logos ou contenus appartenant à d'autres sociétés partenaires ou auteurs.</p>
-</div>
-</div>
 </div>
 </div>
