--- a/app/views/static_pages/conditionsdutilisations.html.erb
+++ b/app/views/static_pages/conditionsdutilisations.html.erb
@@ -4,17 +4,37 @@
 <br>
 
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-sm-6">
-            <div class="border border-dark p-3">
-  
-    <h2>Conditions d'utilisations</h2>
+<div class="container d-flex align-items-center pt-5 my-5">
+  <div class="row justify-content-center modal-body p-5 rounded-4 shadow bg-body-tertiary">
+       
+
+    <h2>1. Acceptation des conditions d'utilisation</h2>
+  <p>En accédant à ce site web, vous acceptez d'être lié par ces conditions d'utilisation du site web, toutes les lois et réglementations applicables, et acceptez que vous êtes responsable du respect de toutes les lois locales applicables. Si vous n'êtes pas d'accord avec l'une de ces conditions, il vous est interdit d'utiliser ou d'accéder à ce site. Les matériaux contenus dans ce site web sont protégés par les lois applicables sur le droit d'auteur et le droit des marques.</p>
+
+  <h2>2. Licence d'utilisation</h2>
+  <p>Il est permis de télécharger temporairement une copie des matériaux (informations ou logiciels) sur le site web de [Nom de la société] pour un usage personnel et non commercial transitoire seulement. C'est l'octroi d'une licence, pas un transfert de titre, et sous cette licence, vous ne pouvez pas :</p>
+  <ul>
+    <li>modifier ou copier les matériaux ;</li>
+    <li>utiliser les matériaux à des fins commerciales, ou pour toute présentation publique (commerciale ou non commerciale) ;</li>
+    <li>tenter de décompiler ou d'ingénierie inverse tout logiciel contenu sur le site web de [Nom de la société] ;</li>
+    <li>supprimer toute mention de droit d'auteur ou autres mentions de propriété des matériaux ; ou</li>
+    <li>transférer les matériaux à une autre personne ou "miroir" les matériaux sur un autre serveur.</li>
+  </ul>
+  <p>Cette licence prendra fin automatiquement si vous violez l'une de ces restrictions et peut être résiliée par [Nom de la société] à tout moment.</p>
+
+  <h2>3. Limitations</h2>
+  <p>En aucun cas, [Nom de la société] ou ses fournisseurs ne pourront être tenus responsables de tout dommage (y compris, sans limitation, les dommages pour perte de données ou de profit, ou en raison d'une interruption d'activité) résultant de l'utilisation ou de l'incapacité à utiliser les matériaux sur le site web de [Nom de la société], même si [Nom de la société] ou un représentant autorisé de [Nom de la société] a été informé oralement ou par écrit de la possibilité de tels dommages.</p>
+
+  <h2>4. Révisions et errata</h2>
+  <p>Les matériaux apparaissant sur le site web de [Nom de la société] pourraient inclure des erreurs techniques, typographiques ou photographiques. [Nom de la société] ne garantit pas que l'un des matériaux sur son site web est précis, complet ou à jour. [Nom de la société] peut apporter des modifications aux matériaux contenus sur son site web à tout moment et sans préavis. Cependant, [Nom de la société] ne s'engage pas à mettre à jour les matériaux.</p>
+
+  <h2>5. Liens</h2>
+  <p>[Nom de la société] n'a pas examiné tous les sites liés à son site web et n'est pas responsable du contenu de ces sites liés. L'inclusion d'un lien n'implique pas l'approbation du site par [Nom de la société]. L'utilisation de tels sites liés est aux risques et périls de l'utilisateur.</p>
+
+  <h2>6. Modifications des conditions d'utilisation du site</h2>
+  <p>[Nom de la société] peut réviser ces conditions d'utilisation de son site web à tout moment et sans préavis. En utilisant ce site web, vous acceptez d'être lié par la version alors en vigueur de ces conditions d'utilisation.</p>
 
 
-
-
-            </div>
-        </div>
+            
     </div>
 </div>
