--- a/app/views/static_pages/conditionsdutilisations.html.erb
+++ b/app/views/static_pages/conditionsdutilisations.html.erb
@@ -1,3 +1,8 @@
+<head>
+<% content_for :title, "Conditions d'utilisations" %>
+<% content_for :meta_description, "Conditions d'utilisations" %>
+</head>
+
 <section class="bg-primary py-5 text-center">
     <h1 class="text-light">Conditions d'utilisations</h1>
 </section>
