--- a/app/views/static_pages/conditionsdutilisations.html.erb
+++ b/app/views/static_pages/conditionsdutilisations.html.erb
@@ -1,10 +1,10 @@
 <head>
-<% content_for :title, "Conditions d'utilisations" %>
-<% content_for :meta_description, "Conditions d'utilisations" %>
+<% content_for :title, "Conditions d'utilisation" %>
+<% content_for :meta_description, "Conditions d'utilisation" %>
 </head>
 
 <section class="bg-primary py-5 text-center">
-    <h1 class="text-light">Conditions d'utilisations</h1>
+    <h1 class="text-light">Conditions d'utilisation</h1>
 </section>
 <br>
 
