--- a/app/views/static_pages/aide.html.erb
+++ b/app/views/static_pages/aide.html.erb
@@ -8,7 +8,7 @@
 </section>
 <div class="row row-cols-1 row-cols-md-2 g-4 mt-1 mb-5">
   <div class="col">
-    <div class="card ms-auto h-100" style="max-width: 30rem;">
+    <div class="card ms-auto h-100 modal-body p-5 rounded-4 shadow bg-body-tertiary" style="max-width: 30rem;">
         <div class="card-body">
             <h5 class="card-title text-center mb-4">Je suis propriétaire</h5>
             <div class="card-text">
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card me-auto h-100" style="max-width: 30rem;">
+    <div class="card me-auto h-100 modal-body p-5 rounded-4 shadow bg-body-tertiary" style="max-width: 30rem;">
         <div class="card-body">
             <h5 class="card-title text-center mb-4">Je suis locataire</h5>
             <div class="card-text">
@@ -52,7 +52,7 @@
 <h3 class="text-center m-4">Quelques questions qui reviennent souvent</h3>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
-    <div class="card ms-auto h-100" style="max-width: 30rem;">
+    <div class="card ms-auto h-100 modal-body p-5 rounded-4 shadow bg-body-tertiary" style="max-width: 30rem;">
         <div class="card-body">
             <h5 class="card-title text-center mb-4">Je suis propriétaire</h5>
             <div class="card-text">
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card me-auto h-100" style="max-width: 30rem;">
+    <div class="card me-auto h-100 modal-body p-5 rounded-4 shadow bg-body-tertiary" style="max-width: 30rem;">
         <div class="card-body">
             <h5 class="card-title text-center mb-4">Je suis locataire</h5>
             <div class="card-text">
