rename titre + meta description 3

--- a/app/views/checkout/cancel.html.erb
+++ b/app/views/checkout/cancel.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Echec de paiement" %>
+<% content_for :meta_description, "Il y a eu un souci lors du paiement" %>
+</head>
 <div class="container text-center my-5"> 
   <h1>Echec</h1> 
   <p>Le paiement n'a pas abouti.</p> 
