--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Achat de crédits" %>
+<% content_for :meta_description, "Consultez ou achetez des crédits pour réserver des séances" %>
+</head>
 <div class="container">
   <h1>Vos crédits et paiements</h1>
   <h2>Votre crédit : <%= @user.credit.round(2) %> €</h2>
