--- a/app/views/static_pages/aide.html.erb
+++ b/app/views/static_pages/aide.html.erb
@@ -1,6 +1,6 @@
 <head>
-<% content_for :title, "aide" %>
-<% content_for :meta_description, "Description de la page" %>
+<% content_for :title, "Aide" %>
+<% content_for :meta_description, "Aide" %>
 </head>
 
 <section class="bg-primary py-5 text-center">
