--- a/app/views/checkout/success.html.erb
+++ b/app/views/checkout/success.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Achat réussit" %>
+<% content_for :meta_description, "Le paiement a été un succès" %>
+</head>
 <div class="container text-center my-5"> 
   <h1>Succès</h1> 
   <p>Nous avons bien reçu votre paiement de <%= number_to_currency(@payment_intent.amount_received / 100.0, unit: "€", separator: ",", delimiter: "", format: "%n %u") %>.</p> 
