rename titre + meta description 4

--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,3 +1,7 @@
+<head>
+<% content_for :title, "Validation de réservation" %>
+<% content_for :meta_description, "Acceptez ou refusez la demande de réservation de l'utilisateur" %>
+</head>
 <div>
   <p>Veuillez vérifier les places disponible avant d'accepter une personne</p>
   <p>Nombre de place demandé : <%= @reservation.quantity %></p>
