--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -7,7 +7,7 @@
     <% workout.reservations.each do |reservation| %>
         
         <div class="reservation">            
-                Participant : <%= link_to reservation.user.email, user_path(reservation.user) %>
+                Participant : <%= link_to reservation.user.pseudo, user_path(reservation.user) %>
                 <br>
                 Note : 
                 <% if reservation.user_rating %>
