fixing the root page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -29,22 +29,25 @@
 <h4 class="mt-5 text-center">Ici, vous pourrez louer des équipements et des locaux sportifs partout en France.</h4>
 <div class="p-2 border-0 bd-example m-0 border-0 row row-cols-1 row-cols-md-2 g-4">
 
-<div class="container">
-  <div class="row justify-content-center align-items-center ">
-    <div class="col"> 
-        <div class="card ms-auto" >
-          <%=  image_tag "landing_page1.jpg", alt: "image de profile" %>
-        </div>
-    </div>
-        <div class="col" >
-          <p>Bonjour et bienvenue chez Keella !
-          Nous sommes votre plateforme de référence pour la location d'équipements sportifs entre particuliers.
-          Que vous soyez un passionné de sport à la recherche d'équipements ou un propriétaire désireux de rentabiliser vos articles sportifs, nous avons la solution pour vous.
-          Avec notre vaste sélection d'équipements de qualité,mise à disposition par des particuliers comme vous, vous pouvez trouver tout ce dont vous avez besoin pour vos activités sportives préférées.
-          Nous facilitons la mise en relation entre locataires et propriétaires, garantissant une expérience fluide, sécurisée et conviviale pour tous.
-          Rejoignez-nous dès aujourd'hui et découvrez comment Keella peut transformer votre manière de pratiquer le sport, en rendant l'accès aux équipements plus facile et plus économique que jamais !</p>
-        </div>
+<div class="container-fluid">
+  <div class="row justify-content-center align-items-center">
+    <div class="col-md-6"> <!-- Colonne pour la photo -->
+      <div class="card">
+        <%= image_tag "landing_page1.jpg", alt: "image de profile" %>
       </div>
+    </div>
+    <div class="col-md-6"> <!-- Colonne pour le texte -->
+      <p>
+        Bonjour et bienvenue chez Keella ! Nous sommes votre plateforme de référence pour la location d'équipements sportifs entre particuliers. 
+        Que vous soyez un passionné de sport à la recherche d'équipements ou un propriétaire désireux de rentabiliser vos articles sportifs, 
+        nous avons la solution pour vous. Avec notre vaste sélection d'équipements de qualité, mise à disposition par des particuliers comme vous, 
+        vous pouvez trouver tout ce dont vous avez besoin pour vos activités sportives préférées. Nous facilitons la mise en relation entre locataires et propriétaires, 
+        garantissant une expérience fluide, sécurisée et conviviale pour tous. Rejoignez-nous dès aujourd'hui et découvrez comment Keella peut transformer votre manière 
+        de pratiquer le sport, en rendant l'accès aux équipements plus facile et plus économique que jamais !
+      </p>
+    </div>
+  </div>
 </div>
+>
 
 </div>
