--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -2,25 +2,26 @@
 <% if @workouts.blank? %>
   <p>Tu n'as pas encore crée de séances donc pas de review</p>
 <% else %>
-<p>Voici les retours de tes invités :</p>
-<% @workouts.each do |workout| %>
-    <% workout.reservations.each do |reservation| %>
-        
-        <div class="reservation">            
-                Participant : <%= link_to reservation.user.pseudo, user_path(reservation.user) %>
-                <br>
-                Note : 
-                <% if reservation.user_rating %>
-                    <% reservation.user_rating.times do %>
-                        <i class="bi bi-star-fill"></i>
-                    <% end %>
-                <% else %>
-                    Pas encore noté
+    <p>Voici les retours de tes invités :</p>
+        <% @workouts.each do |workout| %>
+            <% workout.reservations.each do |reservation| %>
+                <% if reservation.user_rating || reservation.user_comment.present? %>
+                    <div class="reservation">            
+                            Participant : <%= link_to reservation.user.pseudo, user_path(reservation.user) %>
+                            <br>
+                            Note : 
+                            <% if reservation.user_rating %>
+                                <% reservation.user_rating.times do %>
+                                    <i class="bi bi-star-fill"></i>
+                                <% end %>
+                            <% else %>
+                                Pas encore noté
+                            <% end %>
+                            <br>
+                            Commentaire de la séance : <%= reservation.user_comment %>
+                        </p>
+                    </div>
                 <% end %>
-                <br>
-                Commentaire de la séance : <%= reservation.user_comment %>
-            </p>
-        </div>
-    <% end %>
-<% end %>    
+            <% end %>   
+        <% end %>    
 <% end %>  
