date + creatd_at desc

--- a/app/views/users/_hostrating.html.erb
+++ b/app/views/users/_hostrating.html.erb
@@ -2,12 +2,14 @@
   <p>Pas de réservations pour le moment.</p>
 <% else %>
     <p>Tu as participé à un workout. Voici les notes/commentaires de ton hôte :</p>
-    <% @user.reservations.each do |reservation| %>
+    <% @user.reservations.order(created_at: :desc).each do |reservation| %>
         <% if reservation.host_rating || reservation.host_comment.present? %>
             <div class="reservation">
                 <p>
+                Le : <%= reservation.created_at.strftime("%d/%m/%Y") %><br>
                 Hôte :<%= link_to reservation.workout.host.pseudo, user_path(reservation.workout.host) %>
                     <br>
+                    
                     Note :
                     <% if reservation.host_rating %>
                         <% reservation.host_rating.times do %>
