--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -4,9 +4,11 @@
 <% else %>
     <p>Voici les retours de tes invités :</p>
         <% @workouts.each do |workout| %>
-            <% workout.reservations.each do |reservation| %>
+            <% workout.reservations.order(created_at: :desc).each do |reservation| %>
                 <% if reservation.user_rating || reservation.user_comment.present? %>
-                    <div class="reservation">            
+                    <div class="reservation"> 
+                            Le : <%= reservation.created_at.strftime("%d/%m/%Y") %>
+                            <br>           
                             Participant : <%= link_to reservation.user.pseudo, user_path(reservation.user) %>
                             <br>
                             Note : 
