--- a/app/views/workouts/show.html.erb
+++ b/app/views/workouts/show.html.erb
@@ -98,6 +98,8 @@
             <p>Le site set en développement, nous ne pouvons pas encore afficher la somme</p>
             <div>
               <% if user_signed_in?  %>
+                <div class="d-none" id="step-before-reservation">Vous allez etre débiter de la somme indiquée, etes vous sure de vouloir continuer ?</div>
+                <button id="reservation-button">Reserver</button>
                   <% if @workout.places_available > 0 %>
                     <%= form_with(model: @reservation, local: true) do |form| %>                    
                     
