Fixing a top of the reservation edit

--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -2,6 +2,9 @@
   <% content_for :title, "Confirmez votre choix" %>
   <% content_for :meta_description, "Acceptez ou refusez la demande de réservation de l'utilisateur" %>
 </head>
+<section class="bg-primary py-5 text-center">
+    <h1 class="text-light">Confirmez votre choix</h1>
+</section>
 <section class="container-sm d-flex justify-content-center align-items-center pt-5 my-5">
     <div class="modal-body p-5 rounded-4 shadow bg-body-tertiary text-center">
         <p class="h6">Veuillez vérifier les places disponibles avant d'accepter une personne</p>
