--- a/app/views/users/_hostrating.html.erb
+++ b/app/views/users/_hostrating.html.erb
@@ -1,27 +1,33 @@
-<% if @user.reservations.blank? %>
-  <p>Pas de réservations pour le moment.</p>
-<% else %>
-    <p>Tu as participé à un workout. Voici les notes/commentaires de ton hôte :</p>
+<div class="card rounded-4 bg-body-tertiary">
+    <div class="card-header ">
+        <% if @user.reservations.blank? %>
+            <h5>Pas de réservations pour le moment.</h5>
+        <% else %>
+            <h5>Tu as participé à un workout. Voici les notes/commentaires de ton hôte :</h5>
+    </div>
     <% @user.reservations.order(created_at: :desc).each do |reservation| %>
-        <% if reservation.host_rating || reservation.host_comment.present? %>
-            <div class="reservation">
-                <p>
-                Date de réservation le : <%= reservation.created_at.strftime("%d/%m/%Y") %><br>
-                Hôte :<%= link_to reservation.workout.host.pseudo, user_path(reservation.workout.host) %>
-                    <br>
-                    
-                    Note :
-                    <% if reservation.host_rating %>
-                        <% reservation.host_rating.times do %>
-                            <i class="bi bi-star-fill"></i>
-                        <% end %>
-                    <% else %>
-                        Pas encore noté
-                    <% end %>
-                    <br>
-                Commentaire de la séance : <%= reservation.host_comment %>
-            </div>
+            <% if reservation.host_rating || reservation.host_comment.present? %>
+                <div class="card rounded-4  bg-body-tertiary">
+                    <div class="card-body rounded-4  bg-body-tertiary">
+                        <p class="mb-0 "> 
+                            Date de réservation le : <%= reservation.created_at.strftime("%d/%m/%Y") %><br>
+                            Hôte :<%= link_to reservation.workout.host.pseudo, user_path(reservation.workout.host) %>
+                            <br>
+                            Note :
+                            <% if reservation.host_rating %>
+                                <% reservation.host_rating.times do %>
+                                    <i class="bi bi-star-fill"></i>
+                            <% end %>
+                            <% else %>
+                                Pas encore noté
+                            <% end %>
+                            <br>
+                            Commentaire de la séance : <%= reservation.host_comment %>
+                        </p>
+                    </div>
+                </div>
+            <% end %>    
         <% end %>
     <% end %>
-<% end %>         
+</div>         
           
