--- a/app/views/users/_userating.html.erb
+++ b/app/views/users/_userating.html.erb
@@ -1,16 +1,16 @@
-<div class="card">
-    <div class="card-header">
-    <br> 
-    <% if @workouts.blank? %>
-        <h5>Tu n'as pas encore crée de séances donc pas de review</h5>
-    <% else %>
-        <h5>Voici les retours de tes invités :</h5>
+<div class="card rounded-4 bg-body-tertiary">
+    <div class="card-header ">
+    
+        <% if @workouts.blank? %>
+            <h5>Tu n'as pas encore crée de séances donc pas de review</h5>
+        <% else %>
+            <h5>Voici les retours de tes invités :</h5>
     </div>
         <% @workouts.each do |workout| %>
             <% workout.reservations.order(created_at: :desc).each do |reservation| %>
                 <% if reservation.user_rating || reservation.user_comment.present? %>
-                    <div class="card ">
-                        <div class="card-body">
+                    <div class="card rounded-4 bg-body-tertiary ">
+                        <div class="card-body rounded-4 bg-body-tertiary">
                             <p class="mb-0"> 
                                 Date de réservation le : <%= reservation.created_at.strftime("%d/%m/%Y") %>
                                 <br>           
